# KinodynamicInformedSampling

./: .gitignore  CMakeLists.txt  README.md  RRT.py  SimpleEnvironment.py  StateSpaceArmEnvironment.py  StateSpaceDoubleIntegratorEnv.py  Tree.py  avg_distance_bw_points.m  grad_descent.m  main.m  main.py  my_grad.m  package.xml  plot_surf.m  plot_surf.m~  rrt_connect.py  tree.py
cpp_src/: CMakeCache.txt  CMakeLists.txt  Makefile  ProblemDefinition.cpp  ProblemDefinition.h  README.md  Sampler.h  a.out  cmake_install.cmake  out.txt  try.cpp
cpp_src/cmake/Modules/: FindJsoncpp.cmake  FindNLOPT.cmake  FindOMPL.cmake
cpp_src/include/Benchmark/: GeometryProblemGeneration.h  OptionParse.h  ProblemGeneration.h  SampleBenchmark.h  TimeBenchmark.h
cpp_src/include/Dimt/: Dimt.h  DoubleIntegrator.h  DoubleIntegratorMinimumTime.h  Interval.h  Params.h  ProblemGeneration.h
cpp_src/include/OmplWrappers/: DimtStateSpace.h  MyInformedRRTstar.h  MyOptimizationObjective.h  OmplHelpers.h  OmplSamplers.h  ValidityChecker.h
cpp_src/include/ProblemDefinition/: ProblemDefinition.h
cpp_src/include/Sampler/: HitAndRun.h  HitAndRunSampler.h  MonteCarloSampler.h  MonteCarloSamplers.h  OmplSamplers.h  RejectionSampler.h  Sampler.h
cpp_src/include/eigen-eigen-f562a193118d/bench/: BenchSparseUtil.h  BenchTimer.h  BenchUtil.h  analyze-blocking-sizes.cpp  basicbenchmark.cpp  basicbenchmark.h  benchBlasGemm.cpp  benchCholesky.cpp  benchEigenSolver.cpp  benchFFT.cpp  benchGeometry.cpp  benchVecAdd.cpp  bench_gemm.cpp  bench_norm.cpp  bench_reverse.cpp  bench_sum.cpp  benchmark-blocking-sizes.cpp  benchmark.cpp  benchmarkSlice.cpp  benchmarkX.cpp  benchmarkXcwise.cpp  check_cache_queries.cpp  dense_solvers.cpp  eig33.cpp  geometry.cpp  product_threshold.cpp  quat_slerp.cpp  quatmul.cpp  sparse_cholesky.cpp  sparse_dense_product.cpp  sparse_lu.cpp  sparse_product.cpp  sparse_randomsetter.cpp  sparse_setter.cpp  sparse_transpose.cpp  sparse_trisolver.cpp  spmv.cpp  vdw_new.cpp
cpp_src/include/eigen-eigen-f562a193118d/blas/: BandTriangularSolver.h  GeneralRank1Update.h  PackedSelfadjointProduct.h  PackedTriangularMatrixVector.h  PackedTriangularSolverVector.h  Rank2Update.h  common.h  double.cpp  level1_cplx_impl.h  level1_impl.h  level1_real_impl.h  level2_cplx_impl.h  level2_impl.h  level2_real_impl.h  level3_impl.h  single.cpp  xerbla.cpp
cpp_src/include/eigen-eigen-f562a193118d/doc/: tutorial.cpp
cpp_src/include/eigen-eigen-f562a193118d/failtest/: bdcsvd_int.cpp  block_nonconst_ctor_on_const_xpr_0.cpp  block_nonconst_ctor_on_const_xpr_1.cpp  block_nonconst_ctor_on_const_xpr_2.cpp  block_on_const_type_actually_const_0.cpp  block_on_const_type_actually_const_1.cpp  colpivqr_int.cpp  const_qualified_block_method_retval_0.cpp  const_qualified_block_method_retval_1.cpp  const_qualified_diagonal_method_retval.cpp  const_qualified_transpose_method_retval.cpp  eigensolver_cplx.cpp  ldlt_int.cpp  (+33 more)
cpp_src/matlab/: merge_data.m  merge_planning_data.m  plot1.m  plot_log.m  plot_log.m~  plot_obstacles_2d.m  plot_planning_data.m  resample_data.m  simple_HNR_0.csv
cpp_src/matlab/data/: simple_HMC_10.csv  simple_HMC_12.csv  simple_HMC_2.csv  simple_HMC_3.csv  simple_HMC_6.csv  simple_HMC_8.csv  simple_HMC_9.csv  simple_HNR_11.csv  simple_HNR_12.csv  simple_HRS_1.csv  simple_HRS_5.csv  simple_RS_12.csv  simple_RS_9.csv
cpp_src/python/: double_integrator.py  double_integrator_tf.py  double_integrator_theano.py  hmc_edward_kinospace.py  hmc_sample_one.py  plot_log.py  test.py
cpp_src/src/: CMakeLists.txt  DimtStateSpace.h  HitAndRun.cpp  Interval.cpp  MonteCarloSamplers.cpp  MyInformedRRTstar.cpp  MyOptimizationObjective.cpp  OmplHelpers.cpp  OmplSamplers.cpp  ProblemDefinition.cpp  RejectionSampler.cpp  Sampler.cpp  Test.cpp  get_IRRT_star_path.cpp  get_samples.cpp  get_samples_batch.cpp  get_samples_diff_levels.cpp  get_samples_diff_levels_geometry.cpp  get_samples_diff_sample_no.cpp  informed_pointmass.cpp  informed_sampling_test.cpp  kdp_pointmass2d.cpp
cpp_src/src/Benchmark/: CMakeLists.txt  getSamples.cpp  getSamplesBatch.cpp  getSamplesBatchRandom.cpp  getSamplesDiffLevels.cpp  getSamplesDiffLevelsGeometry.cpp  getSamplesDiffSampleNum.cpp  get_samples.cpp  get_samples_batch.cpp  get_samples_diff_levels.cpp  get_samples_diff_levels_geometry.cpp  get_samples_diff_sample_no.cpp
cpp_src/src/Dimt/: CMakeLists.txt  DoubleIntegrator.h  DoubleIntegratorMinimumTime.cpp
cpp_src/src/OmplWrappers/: CMakeLists.txt  MyInformedRRTstar.cpp  MyOptimizationObjective.cpp  OmplHelpers.cpp  ValidityChecker.cpp
cpp_src/src/Planning/: CMakeLists.txt  HerbValidityChecker.cpp  MultiLinkDIValidityChecker.cpp  MultiLinkDIValidityChecker.hpp  batch_informed_pointmass.cpp  create_obstacles.h  file_util.hpp  informed_pointmass.cpp  informed_pointmass_all.cpp  informed_pointmass_diff_hmc.cpp  informed_pointmass_diff_velocity_bounds.cpp  kdp_pointmass2d.cpp  load_problem.h  obstacles.json
cpp_src/src/Sampler/: CMakeLists.txt  HitAndRun.cpp  HitAndRunSampler.cpp  MonteCarloSampler.cpp  MonteCarloSamplers.cpp  MonteCarloSamplers.cpp.autosave  RejectionSampler.cpp  Sampler.cpp
cpp_src/test/: CMakeLists.txt  RndTest.cpp  Test.cpp
src/Benchmark/: CMakeLists.txt  getSamplesBatchRandom.cpp
src/Dimt/: CMakeLists.txt
src/Herb/: CMakeLists.txt  HerbValidityChecker.cpp  HerbValidityChecker.hpp  create_obstacles.h  informed_herb.cpp  informed_herb_all.cpp  load_herb.h  loadpath.cpp
src/OmplWrappers/: CMakeLists.txt  MyBITstar.cpp  MyInformedRRTstar.cpp  MyOptimizationObjective.cpp  OmplHelpers.cpp  ValidityChecker.cpp
src/Planning/: CMakeLists.txt  HerbValidityChecker.cpp  HerbValidityChecker.hpp  MultiLinkDIValidityChecker.cpp  batch_informed_pointmass.cpp  batch_kdp_pointmass2d.cpp  create_obstacles.h  file_util.hpp  informed_pointmass.cpp  informed_pointmass_all.cpp  informed_pointmass_diff_hmc.cpp  informed_pointmass_diff_velocity_bounds.cpp  load_herb.h  load_problem.h
src/Sampler/: CMakeLists.txt  HitAndRunSampler.cpp  MonteCarloSampler.cpp  RejectionSampler.cpp  Sampler.cpp
src/Util/: CMakeLists.txt  loadpath.cpp
(+952 files in other folders)
